--- a/Torrneter/Torrneter.csproj
+++ b/Torrneter/Torrneter.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Class1.cs" />
+    <Compile Include="IDTorrent.cs" />
     <Compile Include="IQueryFactory.cs" />
     <Compile Include="IServerConnector.cs" />
     <Compile Include="Query.cs" />
@@ -101,6 +102,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Transmission WEB API.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
