--- a/Torrneter/Torrenter.csproj
+++ b/Torrneter/Torrenter.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Arguments\Direction.cs" />
+    <Compile Include="Arguments\Adaptors\FieldConnector.cs" />
     <Compile Include="Arguments\SessionStats.cs" />
     <Compile Include="TempSketches\Class1.cs" />
     <Compile Include="Arguments\IDTorrent.cs" />
