--- a/Torrneter/Torrenter.csproj
+++ b/Torrneter/Torrenter.csproj
@@ -56,6 +56,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Argument.cs" />
     <Compile Include="ArgumentsFactory.cs" />
     <Compile Include="Arguments\CustomPair.cs" />
     <Compile Include="Arguments\Direction.cs" />
@@ -63,9 +64,10 @@
     <Compile Include="Arguments\SessionStats.cs" />
     <Compile Include="Arguments\IDTorrent.cs" />
     <Compile Include="ArgumentType.cs" />
+    <Compile Include="IArgumentCreator.cs" />
     <Compile Include="IQueryFactory.cs" />
     <Compile Include="ITagGenerator.cs" />
-    <Compile Include="ITorField.cs" />
+    <Compile Include="ArgumentField.cs" />
     <Compile Include="StandartArgumentFactory.cs" />
     <Compile Include="TempSketches\ChildableTest.cs" />
     <Compile Include="TempSketches\IServerConnector.cs" />
@@ -78,6 +80,7 @@
     <Compile Include="Arguments\TorrentInfo.cs" />
     <Compile Include="TempSketches\TestTemp.cs" />
     <Compile Include="TempSketches\TorField.cs" />
+    <Compile Include="TorrentActionCreator.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
